[package]
name = "borealis-consumer"
version = "0.10.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"
# rust-version = "1.60.0"
description = "NATS consumer/subscriber for Borealis Bus. Provides consuming (as subcriber) of CBOR (or JSON, for debugging) encoded messages about NEAR's on-chain events from Borealis Bus, NATS based service-oriented bus (MOM/MQ)."
homepage = "https://github.com/aurora-is-near/borealis-indexer"
repository = "https://github.com/aurora-is-near/borealis-indexer"
license-file = "LICENSE"
publish = false

[dependencies]
# borealis-types = { path = "../../borealis.rs/borealis-types" }
borealis-types = { git = "ssh://git@github.com/aurora-is-near/borealis.rs.git", branch = "main" }
# borealis-types = { git = "ssh://git@github.com/aurora-is-near/borealis.rs.git", tag = "v0.9.0" }

nats = "0.16.0"

clap = { version = "3.1.15", features = ["derive"] }
openssl-probe = "0.1.2"

actix = "0.13.0"
tokio = { version = "1.18.0", features = ["sync", "rt-multi-thread"] }

tracing = "0.1.13"
tracing-subscriber = "0.2.4"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.55"
serde_cbor = "0.11.2"

rand = "0.8.4"

[dev-dependencies]

[build-dependencies]

[target]

[features]
