[package]
name = "borealis-indexer-types"
version = "0.1.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"
description = "Rust definition of structs sent over the wire by the Borealis Indexer."
homepage = "https://github.com/aurora-is-near/borealis-indexer"
repository = "https://github.com/aurora-is-near/borealis-indexer"
license = "GPLv3"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
near-primitives = { git = "https://github.com/near/nearcore", rev = "e72782fe61122049fca63b41fa4e53a21e40bc57" }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.55"
serde_cbor = "0.11.2"
rand = "0.8.4"

[dev-dependencies]

[build-dependencies]

[target]

[features]

