[package]
name = "borealis-producer-lib"
version = "0.1.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"
# rust-version = "1.58.1"
description = "Borelis Indexer's library for creating NEAR indexers and archival nodes, coupled with NATS producers for Borealis Bus, NATS based service-oriented bus (MOM/MQ)."
homepage = "https://github.com/aurora-is-near/borealis-indexer"
repository = "https://github.com/aurora-is-near/borealis-indexer"
license = "GPLv3"
# license-file = "LICENSE"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
near-indexer = { path = "../near-indexer" }
borealis-types = { path = "../borealis-types" }
nats = "0.16.0"

actix = "=0.11.0-beta.2"
tokio = { version = "1.1", features = ["sync", "time"] }
tokio-stream = { version = "0.1" }

tracing = "0.1.13"
tracing-subscriber = "0.2.4"

# serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.55"
serde_cbor = "0.11.2"

rand = "0.8.4"

[dev-dependencies]

[build-dependencies]

[target]

[features]

