[package]
name = "near-indexer-primitives"
version = "0.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
# rust-version = "1.58.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/nearcore"
description = "This crate hosts structures for the NEAR Indexer Framework types"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.55"

near-primitives = { git = "https://github.com/near/nearcore", rev = "803dd8e988c4f50a8c950bfd9fd9ff9c186ccb56" }
