[package]
name = "near-indexer"
version = "0.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
# rust-version = "1.58.1"
edition = "2021"

[dependencies]
actix = "=0.11.0-beta.2"
anyhow = "1.0.51"
async-recursion = "0.3.2"
tracing = "0.1.13"
futures = "0.3.5"
rocksdb = { version = "0.18.0", default-features = false, features = ["snappy", "lz4", "zstd", "zlib"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["time", "sync"] }

nearcore = { git = "https://github.com/near/nearcore", rev = "803dd8e988c4f50a8c950bfd9fd9ff9c186ccb56" }
near-client = { git = "https://github.com/near/nearcore", rev = "803dd8e988c4f50a8c950bfd9fd9ff9c186ccb56" }
near-chain-configs = { git = "https://github.com/near/nearcore", rev = "803dd8e988c4f50a8c950bfd9fd9ff9c186ccb56" }
near-crypto = { git = "https://github.com/near/nearcore", rev = "803dd8e988c4f50a8c950bfd9fd9ff9c186ccb56" }
near-indexer-primitives = { path = "../near-indexer-primitives" }
near-primitives = { git = "https://github.com/near/nearcore", rev = "803dd8e988c4f50a8c950bfd9fd9ff9c186ccb56" }
node-runtime = { git = "https://github.com/near/nearcore", rev = "803dd8e988c4f50a8c950bfd9fd9ff9c186ccb56" }
